Modified css file to ensure that footer stays at the end/bottom of the page irrespective of main container overflows

--- a/web_static/styles/2-common.css
+++ b/web_static/styles/2-common.css
@@ -4,4 +4,6 @@ body {
 	flex-direction: column;
 	margin: 0;
 	padding: 0;
+	position: relative;
+	min-height: 100vh;
 }
