--- a/web_static/styles/3-common.css
+++ b/web_static/styles/3-common.css
@@ -7,4 +7,6 @@ body {
 	color: #484848;
 	font-size: 14px;
 	font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	position: relative;
+	min-height: 100vh;
 }
