--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -12,6 +12,8 @@ body {
 	color: #484848;
 	font-size: 14px;
 	font-family: Circular, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	position: relative;
+	min-height: 100vh;
 }
 
 .container {
